# ChangeLog for media-sound/mp3blaster
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mp3blaster/ChangeLog,v 1.30 2007/08/11 14:05:10 drac Exp $

*mp3blaster-3.2.3-r1 (11 Aug 2007)

  11 Aug 2007; Samuli Suominen <drac@gentoo.org>
  +mp3blaster-3.2.3-r1.ebuild:
  Fixed depends, USE flags, dodoc, installation, and more.

  30 Jul 2007; Markus Rothe <corsair@gentoo.org> mp3blaster-3.2.3.ebuild:
  Added ~ppc64; bug #187111

  01 Mar 2007; Alexis Ballier <aballier@gentoo.org> mp3blaster-3.2.0.ebuild,
  mp3blaster-3.2.3.ebuild:
  Install splay bin and man as splay_mp3blaster to prevent collisions with
  media-sound/splay

*mp3blaster-3.2.3 (11 Dec 2006)

  11 Dec 2006; Steve Dibb <beandog@gentoo.org> +mp3blaster-3.2.3.ebuild:
  Version bump

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> mp3blaster-3.1.3.ebuild,
  mp3blaster-3.2.0.ebuild, mp3blaster-3.2.2.ebuild:
  dev-db/mysql => virtual/mysql

  23 May 2006; Markus Rothe <corsair@gentoo.org> mp3blaster-3.2.0.ebuild:
  Stable on ppc64

  01 May 2006; Jason Wever <weeve@gentoo.org> mp3blaster-3.2.2.ebuild:
  Added ~sparc keyword as it went missing.

  11 Mar 2006; Fernando J. Pereda <ferdy@gentoo.org>
  mp3blaster-3.2.2.ebuild:
  Add ~alpha keyword as per bug #125761. Tested by Thomas Cort
  <tcort@cs.ubishops.ca>

*mp3blaster-3.2.2 (24 Feb 2006)

  24 Feb 2006; Patrick McLean <chutzpah@gentoo.org>
  +mp3blaster-3.2.2.ebuild:
  Version bump, thanks to Thomas Cort for updating the ebuild for the new
  version (bug #121888). Added ~amd64.

  26 Dec 2005; Luca Barbato <lu_zero@gentoo.org> mp3blaster-3.1.3.ebuild,
  mp3blaster-3.2.0.ebuild:
  oggvorbis Cleanup

  08 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  mp3blaster-3.2.0.ebuild:
  Stable on ppc.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  22 Nov 2004; Markus Rothe <corsair@gentoo.org> mp3blaster-3.2.0.ebuild: