@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/mp3blaster
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mp3blaster/ChangeLog,v 1.30 2007/08/11 14:05:10 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mp3blaster/ChangeLog,v 1.31 2007/08/11 14:18:20 drac Exp $
+
+  11 Aug 2007; Samuli Suominen <drac@gentoo.org> mp3blaster-3.2.3-r1.ebuild:
+  newthreads and libpth support is broken, disable them.
 
 *mp3blaster-3.2.3-r1 (11 Aug 2007)
 
